--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/op.jpeg" alt="one piece"></td>
+      <td><img src="op.jpeg" alt="one piece"></td>
       <td>
         <h1>Rohit Garg</h1>
         <p><em>Founder of Rohit Enterprises</<em></p>
